--- a/index.html
+++ b/index.html
@@ -135,13 +135,16 @@
 
     <a-entity mindar-image-target="targetIndex: 0">
       <a-entity play-on-click material="shader: chromakey; src: #vid; chroma: false; color: 0. 0. 1."
-        geometry="primitive: plane; width:  1; height:  1" position="0  0  0" rotation="0  0  0" side="double">
+        geometry="primitive: plane; width:  0.7; height:  0.7" position="0  0  0" rotation="0  0  0" side="double">
       </a-entity>
-      <a-image  src="./assets/images/educate.png" position="0 0 0.1"
-      rotation="0 0 0" width="0.5" height="0.5"></a-image>
+      <a-image  src="./assets/images/body.png" position="0 0 0.1"
+      rotation="0 0 0" width="0.2" height="0.2"></a-image>
 
-      <a-image  src="./assets/images/body1.png" position="0.5 0 0.2"
-      rotation="0 0 0" width="0.5" height="0.5"></a-image>
+      <a-image  src="./assets/images/nooo.png" position="0.3 0 0.2"
+      rotation="0 0 0" width="0.3" height="0.3"></a-image>
+
+      <a-image  src="./assets/images/uterus.png" position="-0.3 0 0"
+      rotation="0 0 0" width="0.2" height="0.2"></a-image>
 
     </a-entity>
 
