--- a/index.html
+++ b/index.html
@@ -137,17 +137,24 @@
       <a-entity play-on-click material="shader: chromakey; src: #vid; chroma: false; color: 0. 0. 1."
         geometry="primitive: plane; width:  0.7; height:  0.7" position="0  0  0" rotation="0  0  0" side="double">
       </a-entity>
-      <a-image  src="./assets/images/body.png" position="-0.25 0.25 0"
-      rotation="0 0 0" width="0.2" height="0.2"></a-image>
+      
+     <a-image src="./assets/images/body.png" position="-0.20 0.25 0.01"
+rotation="0 0 0" width="0.2" height="0.2"></a-image> 
 
-      <a-image  src="./assets/images/nooHand.png" position="0.3 0.25 0."
+      <a-image  src="./assets/images/nooHand.png" position="0.25 0.20 0.01"
       rotation="0 0 0" width="0.25" height="0.25"></a-image>
 
-      <a-image  src="./assets/images/uterus.png" position="-0.3 0 0"
+      <a-image  src="./assets/images/uterus.png" position="0.1 -0.25 0.01"
       rotation="0 0 0" width="0.2" height="0.2"></a-image>
 
-      <a-image  src="./assets/images/patriarchy.png" position="-0.07 0.07 0"
-      rotation="0 0 0" width="0.15" height="0.15"></a-image>
+      <a-image  src="./assets/images/patriarchy.png" position="-0.06 0.07 0.01"
+      rotation="0 0 0" width="0.2" height="0.15"></a-image>
+
+      <a-image  src="./assets/images/aDress.png" position="-0.15 -0.15 0.01"
+      rotation="0 0 0" width="0.17" height="0.22"></a-image>
+
+      <a-image  src="./assets/images/educateSon.png" position="0.2 -0.055 0.01"
+      rotation="0 0 0" width="0.2" height="0.2"></a-image>
 
     </a-entity>
 
