--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         geometry="primitive: plane; width:  0.7; height:  0.7" position="0  0  0" rotation="0  0  0" side="double">
       </a-entity>
       
-     <a-image src="./assets/images/body.png" position="-0.20 0.22 0.01"
+     <a-image src="./assets/images/bodyWeiß3.png" position="-0.20 0.22 0.01"
       rotation="0 0 0" width="0.2" height="0.2"></a-image> 
 
 
